k8s/manifests/hydra/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra
  labels:
    app: hydra
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hydra
  template:
    metadata:
      labels:
        component: hydra
    spec:
      containers:
        - name: hydra
          image: oryd/hydra:v1.7.4
          command: ["hydra"]
          args:
            - "serve"
            - "all"
            - "--dangerous-force-http"
          ports:
            - name: http-public
              containerPort: 4444
            - name: http-admin
              containerPort: 4445
