k8s/manifests/hydra/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hydra-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - auth.onprem.dev
      secretName: auth-onprem-dev
  rules:
    - host: auth.onprem.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: hydra
              servicePort: 4444
